@startuml

title __STATICENTITY's Class Diagram__\n

  namespace tilegame {
    namespace staticentity {
      abstract class tilegame.staticentity.StaticEntity {
          + StaticEntity()
      }
    }
  }
  

  namespace tilegame {
    namespace staticentity {
      class tilegame.staticentity.ciperca_haleala {
          + ciperca_haleala()
          + die()
          + render()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace staticentity {
      class tilegame.staticentity.door {
          + die()
          + door()
          + render()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace staticentity {
      class tilegame.staticentity.superpower {
          + die()
          + render()
          + superpower()
          + tick()
      }
    }
  }
  

  tilegame.staticentity.StaticEntity -up-|> entities.Entity
  tilegame.staticentity.ciperca_haleala -up-|> tilegame.staticentity.StaticEntity
  tilegame.staticentity.door -up-|> tilegame.staticentity.StaticEntity
  tilegame.staticentity.superpower -up-|> tilegame.staticentity.StaticEntity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
